# SEMSWS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: FindMFEMFromMakeConfig.cmake
driver/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
driver/examples/: 2d_acoustic_local.yaml  lumi_gpu_slurm.yaml  make_demo_inputs.py
driver/examples/demo_inputs/: receivers.csv  sources.csv
driver/src/semsws_driver/: __init__.py
driver/src/semsws_driver/cli/: __init__.py  main.py
driver/src/semsws_driver/core/: __init__.py  layout.py  manifest.py  preflight.py  run.py  run_config.py  template.py
driver/src/semsws_driver/io/: __init__.py  hdf5_schema.py  hdf5_v2.py
driver/src/semsws_driver/runner/: __init__.py  base.py  binding.py  factory.py  local.py  mpi_direct.py  resources.py
driver/src/semsws_driver/runner/launchers/: __init__.py  base.py  local.py  mpiexec.py  mpirun.py  pjm.py  slurm.py
driver/src/semsws_driver/scripts/: __init__.py  report_affinity.sh
driver/tests/: test_affinity_report.py  test_cli.py  test_layout.py  test_make_demo_inputs.py  test_manifest.py  test_preflight.py  test_run_config.py  test_run_smoke.py  test_template.py
driver/tests/io/: test_hdf5_schema_consistency.py  test_hdf5_v2_writer.py
driver/tests/runner/: test_launchers.py  test_resources.py
driver/tools/: merge_shot_outputs.py
examples/elastic_analytic/: README.md  config.yaml  generate_analytical.py  plot_comparison.py  run_benchmark.sh
examples/visco_elastic_3d_layered/: README.md  config_elastic.yaml  config_elastic_sim.yaml  config_visco.yaml  config_visco_sim.yaml  materials_elastic.txt  materials_visco.txt  mesh_layered_3d.jou  plot_comparison.py  run_elastic.sh  run_visco.sh
examples/visualization/: README.md
include/common/: BoundaryUtils.hpp  GpuMacros.hpp  Types.hpp
include/config/: ConfigLoaders.hpp  ConfigTypes.hpp  YamlConfig.hpp
include/coupling/: CoupledSimulationFacade.hpp  FluidSolidInterface.hpp
include/fwi/: CheckpointStorage.hpp  HelmholtzSmoothing.hpp  IsotropicAcousticSensitivity2D.hpp  IsotropicAcousticSensitivity3D.hpp  IsotropicAcousticSensitivityAD2D.hpp  IsotropicAcousticSensitivityAD3D.hpp  IsotropicElasticSensitivity2D.hpp  IsotropicElasticSensitivity3D.hpp  IsotropicElasticSensitivityAD2D.hpp  IsotropicElasticSensitivityAD3D.hpp  SensitivityKernel.hpp  SensitivityKernelFactory.hpp  Visco_IsotropicAcousticSensitivity2D.hpp  Visco_IsotropicAcousticSensitivityAD2D.hpp  Visco_IsotropicAcousticSensitivityAD3D.hpp  Visco_IsotropicElasticSensitivityAD2D.hpp  Visco_IsotropicElasticSensitivityAD3D.hpp
include/integ/: SEMIntegrators.hpp  SEMIsotropicAcousticIntegrator.hpp  (+5 more)
spack-repo/: repo.yaml
src/: CMakeLists.txt  semsws.cpp
src/config/: ConfigLoaders.cpp  HDF5SourceReceiverReader.cpp  YamlConfig.cpp
src/coupling/: CoupledSimulationFacade.cpp  FluidSolidInterface.cpp
src/fwi/: CheckpointStorage.cpp  HelmholtzSmoothing.cpp  IsotropicAcousticSensitivity2D.cpp  IsotropicAcousticSensitivity3D.cpp  IsotropicAcousticSensitivityAD2D.cpp  IsotropicAcousticSensitivityAD3D.cpp  IsotropicElasticSensitivity2D.cpp  IsotropicElasticSensitivity3D.cpp  IsotropicElasticSensitivityAD2D.cpp  IsotropicElasticSensitivityAD3D.cpp  SensitivityKernelFactory.cpp
src/integ/: StiffnessIntegratorFactory.cpp
src/integ/attenuation/: AttenuationCoeffs.cpp  AttenuationModel.cpp  GeneralizedZener.cpp
src/integ/core/: SEMDofOrdering.cpp  SEMGeometry.cpp
src/integ/kernels/: IsotropicAcousticKernels2D.cpp  IsotropicAcousticKernels3D.cpp  IsotropicElasticKernels2D.cpp  IsotropicElasticKernels3D.cpp  Visco_IsotropicAcousticKernels2D.cpp  Visco_IsotropicAcousticKernels3D.cpp  Visco_IsotropicElasticKernels2D.cpp  Visco_IsotropicElasticKernels3D.cpp
src/integ/mass/: SEMMassIntegrator2D.cpp  SEMMassIntegrator3D.cpp
src/io/: ADIOS2IO.cpp  FieldVizWriter.cpp  GMTWavefieldWriter.cpp  MaterialWriter.cpp  ParaViewWavefieldWriter.cpp  WavefieldWriter.cpp  WavefieldWriterFactory.cpp
src/material/: InterpolatingCoefficient.cpp  MaterialFactory.cpp  MaterialField.cpp
src/material/isotropic_acoustic/: IsotropicAcousticBuilder.cpp  IsotropicAcousticIO.cpp  IsotropicAcousticLoader.cpp  IsotropicAcousticMaterial.cpp
src/material/isotropic_elastic/: IsotropicElasticBuilder.cpp  IsotropicElasticIO.cpp  IsotropicElasticLoader.cpp  IsotropicElasticMaterial.cpp
src/operator/: OperatorFactory.cpp  WaveOperator.cpp  WaveOperatorBase2D.cpp  WaveOperatorBase3D.cpp
src/operator/acoustic/: AcousticOperator2D.cpp  AcousticOperator3D.cpp
src/operator/damping/: CerjanABC.cpp
src/operator/elastic/: ElasticityOperator2D.cpp  ElasticityOperator3D.cpp
src/revolve/: Revolve.cpp
src/simulation/: AdjointSimulation.cpp  ForwardSimulation.cpp  SimulationComponents.cpp  SimulationFacade.cpp  SimulationFacadeSetup.cpp  SimulationIONew.cpp  SimulationRunner.cpp
src/srcrecv/: SrcRecvLoaders.cpp
src/srcrecv/inversion/: AdjointSource.cpp  HDF5ObservedReader.cpp  HDF5SourceReceiverWriter.cpp  ObservedData.cpp  ObservedResampler.cpp
src/srcrecv/receiver/: ReceiverData.cpp  ReceiverFactory.cpp  ReceiverIO.cpp  ReceiverLocation.cpp  ReceiverRecord.cpp
src/srcrecv/source/: SourceCollection.cpp  SourceFactory.cpp  SourceLocation.cpp  SourceTimeFunction.cpp
src/timeinteg/: TimeIntegrator.cpp
src/tools/: combine_mesh.cpp  coupling_probe_facade.cpp  coupling_probe_gmsh.cpp  coupling_probe_interface.cpp  evaluate_mesh.cpp  export_model.cpp  partition_mesh.cpp  refine_mesh.cpp  sem_viz.cpp  smooth_kernel.cpp
src/util/: MemoryReport.cpp  PointFinder.cpp
test/: conftest.py  pytest.ini
test/unit/: CMakeLists.txt  HDF5FixtureWriter.hpp  acoustic_ad_vs_hand_3d_test.cpp  acoustic_ad_vs_hand_test.cpp  adjoint_source_operator_test.cpp  dual_smoke_test.cpp  elastic_ad_vs_hand_3d_test.cpp  hdf5_reader_catalog_test.cpp  hdf5_reader_compression_test.cpp  hdf5_reader_hyperslab_test.cpp  hdf5_reader_mpi_test.cpp  hdf5_srcrecv_reader_basic_test.cpp  hdf5_srcrecv_reader_sources_test.cpp  observed_resampler_test.cpp  observed_types_test.cpp
(+394 files in other folders)
