[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semsws-driver"
version = "0.2.0"
description = "Thin run-only driver for SEMSWS large-scale forward / FWI runs"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kota", email = "4910125mk@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "h5py>=3.8",
]

[project.scripts]
semsws-driver = "semsws_driver.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"semsws_driver.scripts" = ["*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
